Add functions.py, import commissions from sheet

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-toml
 bcrypt
 fasteners
-GitPython
 git+https://github.com/ryanvilbrandt/bottle.git@master
-git+https://github.com/ryanvilbrandt/python-markdown2.git@master
 bottle_websocket
+google-api-python-client
