--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 bcrypt
 fasteners
 git+https://github.com/ryanvilbrandt/bottle.git@master
+mako
 bottle_websocket
-google-api-python-client
 markdown2
 faker
 requests
